--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -145,9 +145,9 @@
 			<div class="row flex-column-reverse  flex-md-row">
 				<div class="col-md-4">
 					<picture>
-						<source type="image/webp" srcset="{{ asset('img/solo-anims-paris.webp') }}">
-						<source type="image/jpeg" srcset="{{ asset('img/solo-anims-paris.jpg') }}">
-						<img src="{{ asset('img/solo-anims-paris.jpg') }}" alt="Accordéoniste sur scène, à Paris" title="Jérémy Dutheil, accordéoniste à Paris" class="img-fluid page-section__img">
+						<source type="image/webp" data-srcset="{{ asset('img/solo-anims-paris.webp') }}">
+						<source type="image/jpeg" data-srcset="{{ asset('img/solo-anims-paris.jpg') }}">
+						<img data-src="{{ asset('img/solo-anims-paris.jpg') }}" alt="Accordéoniste sur scène, à Paris" title="Jérémy Dutheil, accordéoniste à Paris" class="img-fluid page-section__img lazyload">
 					</picture>
 				</div>
 
@@ -205,10 +205,10 @@
 
 				<div class="col-md-4 ">
 					<picture>
-						<source type="image/webp" srcset="{{ asset('img/manouchebg.webp') }}">
-						<source type="image/jpeg" srcset="{{ asset('img/manouchebg.jpg') }}">
+						<source type="image/webp" data-srcset="{{ asset('img/manouchebg.webp') }}">
+						<source type="image/jpeg" data-srcset="{{ asset('img/manouchebg.jpg') }}">
 
-						<img src="{{ asset('img/manouchebg.jpg') }}" alt="Duo jazz manouche avec accordéon" title="Jérémy Dutheil & Solal Poux - Jazz manouche avec accordéon" class="img-fluid page-section__img">
+						<img data-src="{{ asset('img/manouchebg.jpg') }}" alt="Duo jazz manouche avec accordéon" title="Jérémy Dutheil & Solal Poux - Jazz manouche avec accordéon" class="img-fluid page-section__img lazyload">
 					</picture>
 
 					<p style="margin-top: 15px;">
@@ -227,10 +227,10 @@
 			<div class="row flex-column-reverse flex-md-row">
 				<div class="col-md-4">
 					<picture>
-						<source type="image/webp" srcset="img/swingcocktail2.webp">
-						<source type="image/jpeg" srcset="img/swingcocktail2.png">
+						<source type="image/webp" data-srcset="img/swingcocktail2.webp">
+						<source type="image/jpeg" data-srcset="img/swingcocktail2.png">
 
-						<img class="img-fluid page-section__img" src="img/swingcocktail2.png" alt="Trio jazz avec accordéon" title="Trio jazz, avec Jérémy Dutheil à l'accordéon">
+						<img class="img-fluid page-section__img lazyload" data-src="img/swingcocktail2.png" alt="Trio jazz avec accordéon" title="Trio jazz, avec Jérémy Dutheil à l'accordéon">
 					</picture>
 				</div>
 
@@ -289,10 +289,10 @@
 
 				<div class="col-md-4 ">
 					<picture>
-						<source type="image/webp" srcset="{{ asset('img/elena.webp') }}">
-						<source type="image/jpeg" srcset="{{ asset('img/elena.jpg') }}">
+						<source type="image/webp" data-srcset="{{ asset('img/elena.webp') }}">
+						<source type="image/jpeg" data-srcset="{{ asset('img/elena.jpg') }}">
 
-						<img src="{{ asset('img/elena.jpg') }}" alt="Chanteuse et accordéoniste" title="Elena Josse et Jérémy DUTHEIL, accordéon / voix" class="img-fluid page-section__img">
+						<img data-src="{{ asset('img/elena.jpg') }}" alt="Chanteuse et accordéoniste" title="Elena Josse et Jérémy DUTHEIL, accordéon / voix" class="lazyload img-fluid page-section__img">
 					</picture>
 				</div>
 			</div>
