--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,10 +36,10 @@
         <meta property="og:description" content="Jérémy Dutheil est accordéoniste professionnel à Paris, Ile de France">
         <meta property="og:image" content="http://www.jeremy-dutheil.fr/img/videos-pic.jpg">
 
+        <!--<link rel="dns-prefetch" href="//fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 
-        <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Hind:400,400i,700,700i|Oswald:400,700" rel="stylesheet">-->
 
         <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">-->
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">-->
