--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -194,7 +194,7 @@
                     <a title="Retrouvez moi sur Facebook" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank" ><i class="fab fa-facebook"></i></a>
                     <a title="Retrouvez moi sur Youtube" style="font-size: 24px; color: #FFFFFF; " href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
 
-                    <a title="Retrouvez moi sur Deezer" style="font-size: 24px; color: #FFFFFF;" href="https://www.deezer.com/album/131652802" target="_blank"><img src="{{ asset('img/deezer.png') }}" alt="" style="height: 50px;"</a>
+                    <a title="Retrouvez moi sur Deezer" style="font-size: 24px; color: #FFFFFF;" href="https://www.deezer.com/album/131652802" target="_blank"><img data-src="{{ asset('img/deezer.png') }}" class="lazyload" alt="" style="height: 50px;"</a>
                     <a title="Retrouvez moi sur Spotify" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://open.spotify.com/album/5h6OhuDtbu3D2M9kl1QRoV" target="_blank"><i class="fab fa-spotify"></i></a>
 
                     <a title="Retrouvez moi sur Soundcloud" style="font-size: 24px; color: #FFFFFF;" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
