--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -10,6 +10,7 @@
        url('../fonts/hind-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/hind-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/hind-v10-latin-regular.svg#Hind') format('svg'); /* Legacy iOS */
+   font-display: swap;
 }
 /* hind-700 - latin */
 @font-face {
@@ -23,6 +24,7 @@
        url('../fonts/hind-v10-latin-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/hind-v10-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/hind-v10-latin-700.svg#Hind') format('svg'); /* Legacy iOS */
+   font-display: swap;
 }
 
 /* oswald-regular - latin */
@@ -37,6 +39,7 @@
        url('../fonts/oswald-v31-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/oswald-v31-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/oswald-v31-latin-regular.svg#Oswald') format('svg'); /* Legacy iOS */
+   font-display: swap;
 }
 /* oswald-700 - latin */
 @font-face {
@@ -50,4 +53,5 @@
        url('../fonts/oswald-v31-latin-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/oswald-v31-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/oswald-v31-latin-700.svg#Oswald') format('svg'); /* Legacy iOS */
+   font-display: swap;
 }
