--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -224,7 +224,7 @@
 
 
         {% block javascripts %}
-            <!--{{ encore_entry_script_tags('app') }}-->
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
 </html>
