--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -125,9 +125,9 @@
 
 				<div class="col-md-4">
 					<picture>
-						<source type="image/webp" data-srcset="{{ asset('img/videos-pic.webp') }}">
-						<source type="image/jpeg" data-srcset="{{ asset('img/videos-pic.jpg') }}">
-						<img data-src="{{ asset('img/videos-pic.jpg') }}" alt="Jérémy DUTHEIL, accordéoniste, en concert" title="Accordéoniste parisien en concert" class="img-fluid page-section__img lazyload">
+						<source type="image/webp" srcset="{{ asset('img/videos-pic.webp') }}">
+						<source type="image/jpeg" srcset="{{ asset('img/videos-pic.jpg') }}">
+						<img src="{{ asset('img/videos-pic.jpg') }}" alt="Jérémy DUTHEIL, accordéoniste, en concert" title="Accordéoniste parisien en concert" class="img-fluid page-section__img">
 					</picture>
 				</div>
 				<!-- /.col-sm-4 -->
